Fix styling for Sticky Note workspace scroll bar in dark mode theming

--- a/src/styling/noteslist.css
+++ b/src/styling/noteslist.css
@@ -172,3 +172,8 @@
 .sticky-notes-group select.group-color-select:hover {
   color: var(--button-active-accent-color);
 }
+
+/* theme styling */
+[data-theme="dark"] #notes-list-wrapper {
+  scrollbar-color: var(--button-background-color) transparent;
+}
